@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,2,7,44
-#define PRODUCTVER     0,2,7,142
-#define STRFILEVER     "0.2.7.44"
-#define STRPRODUCTVER  "0.2.7.142"
-#define STRPRODUCTDATE  "2007-11-06"
+#define FILEVER        0,2,7,51
+#define PRODUCTVER     0,2,7,149
+#define STRFILEVER     "0.2.7.51"
+#define STRPRODUCTVER  "0.2.7.149"
+#define STRPRODUCTDATE  "2007-11-08"
 #endif // AUTOBUILD_H
