@@ -3,9 +3,12 @@ TODO:
  * Fix configuration GUI (low priority)
  * Fix installer (after configuration UI)
  * Add module for relaying events
- * Fix WMI module
- * Fix PDH problems
  * Add API for rehashing the daemon (or implement it the API is there but does nothing)
+
+2007-11-08 MickeM
+ + Added CheckWMIValue to check result-values from a WMI Query
+ * Changed so performance values are "collapsed" ie 75362115584 = 70.0G (#89)
+    If anyone dont want this let me know and I will make an option for it.
 
 2007-11-06 MickeM
  + Added CLI interface to CheckWMI to check queries
